--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Titulo</title>
+    <title>Colorful Stripes Lines Animation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<img src="netflix-logo-png-2562.png" class="logo">
 </body>
 </html>
